# cmake-brown-bag

./: CMakeLists.txt
src/: HelloWorld.cpp  SayString.h.in  say.cpp  say.hpp
src/tests/: TestGoodbye.cpp  TestSay.cpp
